[tool.poetry]
name = "chroma-formatter"
version = "5.0.9"
description = "Wrapper for the Python logging formatter that adds color."
readme = "README.md"
repository = "https://gitlab.com/mburkard/chroma-formatter"
homepage = "https://gitlab.com/mburkard/chroma-formatter"
license = "AGPL-3.0-or-later"
authors = ["Matthew Burkard <matthewjburkard@gmail.com>"]
classifiers = ["Programming Language :: Python :: 3"]
packages = [
    { include = "src/chromaformatter/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
