[tool.poetry]
name = "chromaformatter"
version = "5.3.5"
description = "Wrapper for the Python logging formatter that adds color."
readme = "README.md"
repository = "https://gitlab.com/mburkard/chroma-formatter"
homepage = "https://gitlab.com/mburkard/chroma-formatter"
license = "AGPL-3.0-or-later"
authors = ["Matthew Burkard <matthewjburkard@gmail.com>"]
classifiers = ["Programming Language :: Python :: 3"]
packages = [
    { include = "src/chromaformatter/**/*.py" },
    { include = "src/chromaformatter/**/py.typed" },
]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
mypy = "^0.941"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
