[tool.poetry]
name = "chromaformatter"
version = "6.0.0"
description = "Wrapper for the Python logging formatter that adds color."
readme = "README.md"
repository = "https://gitlab.com/mburkard/chroma-formatter"
homepage = "https://gitlab.com/mburkard/chroma-formatter"
license = "MIT"
authors = ["Matthew Burkard <matthewjburkard@gmail.com>"]
classifiers = ["Programming Language :: Python :: 3"]
packages = [
    { include = "chromaformatter/**/*.py" },
    { include = "chromaformatter/**/py.typed" },
]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
