[metadata]
name = chromaformatter
version = 5.0.6
author = Matthew Burkard
author_email = matthewjburkard@gmail.com
description = Wrapper for the Python logging formatter that adds color.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/mburkard/chroma-formatter
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.7
install_requires =
	colorama~=0.4.4

[options.packages.find]
where = src
